--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 COMPOSE_PROJECT_NAME=cicd-toolbox
+#Install mode can be local or vm
+install_mode=vm
+DOMAIN_NAME_TL=test
+DOMAIN_NAME_SL=provider
 default_user=netcicd
 default_user_password=netcicd
 
