--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -10,13 +10,13 @@ DISABLE_SSH      = true
 START_SSH_SERVER = true
 OFFLINE_MODE     = false
 APP_DATA_PATH    = /data/gitea
-CERT_FILE        = gitea.tooling.provider.test.crt
-KEY_FILE         = gitea.tooling.provider.test.pem
+CERT_FILE        = gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
+KEY_FILE         = gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
 
 
 [database]
 DB_TYPE     = postgres
-HOST        = cicdtoolbox-db.internal.provider.test
+HOST        = cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
 NAME        = gitea
 SCHEMA      =
 SSL_MODE    = verify-full
@@ -130,7 +130,7 @@ SUBJECT_PREFIX = [CICD-toolbox message]
 ;; If this is false but STARTTLS is supported the connection will be upgraded to TLS opportunistically.
 ;IS_TLS_ENABLED = true
 ;; Mail from address, RFC 5322. This can be just an email address, or the `"Name" <email@example.com>` format
-;FROM = CICD-toolbox@provider.test
+;FROM = CICD-toolbox@${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
 ;; Mailer user name and password
 ;; Please Note: Authentication is only supported when the SMTP server communication is encrypted with TLS (this can be via STARTTLS) or `HOST=localhost`.
 ;USER =
