--- a/cicdtoolbox-db/compose.yaml
+++ b/cicdtoolbox-db/compose.yaml
@@ -4,13 +4,13 @@ volumes:
 
 secrets:
   cicdtoolbox-db_key:
-    file: ../vault/certs/cicdtoolbox-db.internal.provider.test.pem
+    file: ../vault/certs/cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem
   cicdtoolbox-db_crt:
-    file: ../vault/certs/cicdtoolbox-db.internal.provider.test.crt
+    file: ../vault/certs/cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt
 
 services:
-  cicdtoolbox-db.internal.provider.test:
-    container_name: cicdtoolbox-db.internal.provider.test
+  cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:
+    container_name: cicdtoolbox-db.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
     build: .
     command: |
       -c ssl=on  -c ssl_cert_file=/var/lib/postgresql/server.crt -c ssl_key_file=/var/lib/postgresql/server.key
