--- a/jenkins/casc.yaml
+++ b/jenkins/casc.yaml
@@ -369,11 +369,11 @@ jenkins:
       fullNameFieldName: "name"
       groupsFieldName: "groupmembership"
       logoutFromOpenidProvider: true
-      postLogoutRedirectUrl: "https://jenkins.tooling.provider.test:8084"
+      postLogoutRedirectUrl: "https://jenkins.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8084"
       sendScopesInTokenRequest: true
       serverConfiguration:
         wellKnown:
-          wellKnownOpenIDConfigurationUrl: "https://keycloak.services.provider.test:8443/realms/cicdtoolbox/.well-known/openid-configuration"
+          wellKnownOpenIDConfigurationUrl: "https://keycloak.services.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8443/realms/cicdtoolbox/.well-known/openid-configuration"
       userNameField: "preferred_username"
   globalNodeProperties:
     - envVars:
@@ -397,12 +397,12 @@ security:
     - "staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods getText java.io.File"
 unclassified:
   location:
-    url: https://jenkins.tooling.provider.test:8084/
+    url: https://jenkins.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8084/
   giteaServers:
     servers:
     - displayName: "Gitea"
       manageHooks: false
-      serverUrl: "https://gitea.tooling.provider.test:3000"
+      serverUrl: "https://gitea.tooling.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:3000"
   timestamper:
     allPipelines: true
     elapsedTimeFormat: "'<b>'HH:mm:ss.S'</b> '"
