--- a/vault/conf/vault/vault-config-ssl.json
+++ b/vault/conf/vault/vault-config-ssl.json
@@ -1,7 +1,7 @@
 {
   "backend": {
     "consul": {
-      "address": "consul.internal.provider.test:8500",
+      "address": "consul.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8500",
       "path": "vault/"
     }
   },
@@ -9,12 +9,12 @@
     "tcp":{
       "address": "0.0.0.0:8200",
       "tls_disable": 0,
-      "tls_cert_file": "/vault/config/vault.internal.provider.test.crt",
-      "tls_key_file": "/vault/config/vault.internal.provider.test.pem",
+      "tls_cert_file": "/vault/config/vault.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.crt",
+      "tls_key_file": "/vault/config/vault.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}.pem",
       "tls_client_ca_file": "/vault/config/ca.crt",
       "tls_disable_client_certs": "true"  
     }
   },
   "ui": true,
-  "api_addr": "https://vault.internal.provider.test:8200"
+  "api_addr": "https://vault.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}:8200"
 }
