--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ secrets:
     file: ./vault/certs/ca.crt
 
 services:
-  seleniumffhost.internal:
+  seleniumffhost:
     container_name: seleniumffhost.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
     image: 'selenium/standalone-firefox:latest'
     restart: unless-stopped
@@ -33,7 +33,7 @@ services:
       internal:
         ipv4_address: 172.16.10.100
 
-  seleniumgchost.internal:
+  seleniumgchost:
     container_name: seleniumgchost.internal.${DOMAIN_NAME_SL}.${DOMAIN_NAME_TL}
     image: 'selenium/standalone-chrome:latest'
     restart: unless-stopped
